crates/lingui_macro/tests/snapshots/jsx_icu__id_only_essential_props_are_kept.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
info:
  descriptor_fields: id-only
---
import { Plural } from '@lingui/macro';

<Plural
  id="custom.id"
  context="My Context"
  comment="This is for translators"
  render="render"
  i18n="i18n"
  value={count}
  offset="1"
  _0="Zero items"
  other={<a href="/more">A lot of them</a>}
  />

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "custom.id",
    values: {
        count: count
    },
    components: {
        0: <a href="/more"/>
    }
}} render="render" i18n="i18n"/>;
