crates/lingui_macro/tests/snapshots/jsx_icu__jsx_icu.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
import { Plural } from "@lingui/react/macro";

const ex1 = <Plural
 value={count}
 one="Message"
 other="Messages"
/>

const ex2 = <div><Plural
value={count}
one="Message"
other="Messages"
/></div>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
const ex1 = <Trans_ {.../*i18n*/ {
    id: "V4EO9s",
    values: {
        count: count
    },
    message: "{count, plural, one {Message} other {Messages}}"
}}/>;
const ex2 = <div><Trans_ {.../*i18n*/ {
    id: "V4EO9s",
    values: {
        count: count
    },
    message: "{count, plural, one {Message} other {Messages}}"
}}/></div>;
