crates/lingui_macro/tests/snapshots/jsx_icu__jsx_icu_explicit_id.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
 import { Plural } from "@lingui/react/macro";

<Plural
 id="plural.id"
 value={count}
 one="Message"
 other="Messages"
/>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "plural.id",
    values: {
        count: count
    },
    message: "{count, plural, one {Message} other {Messages}}"
}}/>;
