crates/lingui_macro/tests/snapshots/jsx_icu__jsx_icu_value_index_follows_source_order.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
import { Plural } from "@lingui/react/macro";

const x = <Plural one={`${a.b} glass`} value={items.length} other="many" />

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
const x = <Trans_ {.../*i18n*/ {
    id: "HUUtwt",
    values: {
        0: a.b,
        1: items.length
    },
    message: "{1, plural, one {{0} glass} other {many}}"
}}/>;
