crates/lingui_macro/tests/snapshots/jsx_icu__jsx_icu_with_template_literal.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
import { Plural } from "@lingui/react/macro";

 <Plural
   value={count}
   one={`${count} items`}
   other="..."
 />;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "-hE-5_",
    values: {
        count: count
    },
    message: "{count, plural, one {{count} items} other {...}}"
}}/>;
