crates/lingui_macro/tests/snapshots/jsx_icu__jsx_multivelel_nesting.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
import { Trans, Plural } from '@lingui/macro';

<Plural
  value={count}
  one={
    <Trans>
      <Plural
        value={count2}
        one={
          <Trans>
            second level one
          </Trans>
        }
        other={
          <Trans>
            second level other
          </Trans>
        }
      />

      <strong>#</strong> slot added
    </Trans>
  }
  other={
    <Trans>
      <strong>#</strong> slots added
    </Trans>
  }
/>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "bDgQmM",
    values: {
        count: count,
        count2: count2
    },
    components: {
        0: <strong/>,
        1: <strong/>
    },
    message: "{count, plural, one {{count2, plural, one {second level one} other {second level other}}<0>#</0> slot added} other {<1>#</1> slots added}}"
}}/>;
