crates/lingui_macro/tests/snapshots/jsx_icu__jsx_plural_preserve_reserved_attrs.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
 import { Plural } from "@lingui/react/macro";

<Plural
 comment="Translators Comment"
 context="Message Context"
 render={(v) => v}
 value={count}
 one="..."
 other="..."
/>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "8I55rI",
    values: {
        count: count
    },
    comment: "Translators Comment",
    message: "{count, plural, one {...} other {...}}",
    context: "Message Context"
}} render={(v)=>v}/>;
