crates/lingui_macro/tests/snapshots/jsx_icu__jsx_plural_with_offset_and_exact_matches.snap
---
source: crates/lingui_macro/tests/jsx_icu.rs
---
import { Plural } from "@lingui/react/macro";

 <Plural
   value={count}
   offset="1"
   _0="Zero items"
   other={<a href="/more">A lot of them</a>}
 />;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "ZFknU1",
    values: {
        count: count
    },
    components: {
        0: <a href="/more"/>
    },
    message: "{count, plural, offset:1 =0 {Zero items} other {<0>A lot of them</0>}}"
}}/>;
